recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: not found: value n
	n=0
        ^Spiral:4: error: not found: value n
	avance(n);
               ^Spiral:6: error: not found: value n
	n=n+3;
        ^